# wgmeeting-github-ircbot

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  rustfmt.toml  start-ircbot-if-needed.sh
src/: config-dev.json  config-dev.toml  config.json  config.toml  lib.rs  main.rs
tests/: take_while_external_condition.rs  test_chats.rs
tests/chats/: agendum-1.txt  bye-1.txt  escape-issue-number-1.txt  ignore-present-plus.txt  invite-and-channel-separation-1.txt  off-hidden-me-1.txt  pull-1.txt  resolution-1.txt  resolution-2.txt  resolutions-only.txt  split-long-line-1.txt  status-1.txt  subtopic-1.txt  take-up-1.txt  topic-1.txt  topic-2.txt  topic-3.txt  topic-meeting-end-1.txt  topic-meeting-end-2.txt  topic-none-1.txt
