[package]
name = "wgmeeting_github_ircbot"
version = "0.4.5"
authors = ["L. David Baron <dbaron@dbaron.org>"]
build = "build.rs"
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
irc = { version = "0.15", default-features = false, features = ["tls-rust", "serde"] }
lazy_static = "1.4"
regex = "1.4"
tokio = { version = "1.6", features = ["rt", "macros", "time", "io-util", "net"] }
# hubcaps = { version = "0.6.2", default-features = false, features = [ "rustls-tls" ] }
hubcaps = { git = "https://github.com/softprops/hubcaps", branch = "master", default-features = false, features = [ "rustls-tls" ] }
serde = "1.0"
serde_derive = "1.0"
diff = "0.1"
toml = "0.5"
