[package]
name = "wgmeeting_github_ircbot"
version = "0.4.8"
authors = ["L. David Baron <dbaron@dbaron.org>"]
build = "build.rs"
edition = "2024"

[dependencies]
futures = "0.3"
log = "0.4"
env_logger = "0.11"
irc = { version = "1.0", default-features = false, features = ["tls-rust", "serde"] }
regex = "1.0"
tokio = { version = "1.6", features = ["rt", "macros", "time", "io-util", "net"] }
octorust = "0.10"
serde = "1.0"
serde_derive = "1.0"
diff = "0.1"
toml = "0.8"
anyhow = "1.0"
